# digit

./: .gitattributes  .gitignore  .gitmodules  README.md  Untitled Document 1  best_trial.txt  cannyedge.py  cannyedge_line_detection.py  demo.py  demo2.py  edge.py  lightglue_test.py  optimization.py  optuna.db  screencapture.py  slic_line_detection.py  static_canny.py  static_slic.py  static_ww.py  unet_line_detection.py  workspace.code-workspace  ww_line_detection.py
checkpoint/: .gitignore
dataset/: param_id,trial_id,param_name,param_value  read_csv.py  trial_value_id,trial_id,objective,value,
digit_interface/: digit.py  digit_handler.py  edge_real_time.py
edge_detection_autoencoder/: __init__.py  dataset.py  evaluate.py  train.py  unet.py  unet_line_detection.pth  unet_line_detection.pth:Zone.Identifier
edge_detection_autoencoder/model/: autoencoder.py
example/: demo_digit.py
latex-template-cgv/: main.aux  main.bbl  main.bcf  main.blg  main.lof  main.lot  main.tex  main.toc
latex-template-cgv/0_frontmatter/: 0_header.tex  1_title.tex  2_task.tex  4_abstract.tex  5_acronyms.tex
latex-template-cgv/1_mainmatter/: 0_about_this_template.tex  1_introduction.tex  7_outline.tex
latex-template-cgv/2_bib/: 0_bibliography.tex  references.bib
outcome_log/: analysis.py  canny_log(og).txt  canny_log.txt  extract_time.py  slic_log.txt  unet_log.txt  ww_log.txt
src/: CMakeLists.txt  grasp_object.cpp
utils/: draw_lines.py  edge.py  match.py
ww_edges/: edge.py  filelist.txt  main.py  std_cpu.txt  std_gpu.txt  vertical_list.txt
(+1 files in other folders)
